fix: no more stretching the background image

--- a/client/src/components/ui/hero-section.css
+++ b/client/src/components/ui/hero-section.css
@@ -1,6 +1,8 @@
 .hero__section {
   background-image: url('../../assets/images/extended_hero.png');
-  background-size: 100% 100%;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
   margin-top: 120px;
 }
 
